samples/_failures_safe/1761355888_104e12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1600fcf9.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_1600fcf9.c:156:17: error: expected declaration or statement at end of input
  156 |                 token.value[MAX_TOKEN_LEN - 1] = '\0';
      |                 ^~~~~
./samples/SAFE/__tmp_1600fcf9.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1600fcf9.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1600fcf9.c:156:17: error: expected declaration or statement at end of input
